处理商品页面布局

--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -5,13 +5,17 @@ body,html
 
 border-1px($color)
   position: relative
-  &:break-after
+  &:after
     display: block
     position: absolute
     left: 0
     bottom: 0
     border-top: 1px solid $color
     content: ''
+
+border-none()
+  &:after
+    display: none
 
 bg-image($url)
   background-image: url($url + "@2x.png")
